--- a/calculadora/index.html
+++ b/calculadora/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="styless.css">
-    <script src="calculator.js"></script>
-    <script src="display.js"></script>
-    <script src="index.js" defer></script>
+    <link rel="stylesheet" href="/css/styless.css">
+    <script src="/js/calculator.js"></script>
+    <script src="/js/display.js"></script>
+    <script src="/js/index.js" defer></script>
     
 </head>
 <body>
